# ARIS-WEB

./: .gitignore  CHANGELOG.md  Cargo.toml  INTRODUCTION_DRAFT.md  INTRODUCTION_REVISED.md  INTRO_CONTEXT.md  INTRO_OUTLINE.md  INTRO_RELATED_WORK.md  INTRO_REVIEW.md  INTRO_REVISION_SUMMARY.md  LICENSE  README.md  README_CN.md  README_EN.md
crates/api/: Cargo.toml
crates/api/src/: client.rs  error.rs  lib.rs  sse.rs  types.rs
crates/api/tests/: client_integration.rs
crates/aris-cli/: Cargo.toml  build.rs
crates/aris-cli/src/: config.rs  deepseek_executor.rs  init.rs  input.rs  main.rs  memories.rs  meta_optimize.rs  openai_compat.rs  openai_executor.rs  render.rs
crates/runtime/: Cargo.toml  build.rs
crates/runtime/assets/: SKILLS_SOURCE_COMMIT
crates/runtime/assets/skills/ablation-planner/: SKILL.md
crates/runtime/assets/skills/alphaxiv/: SKILL.md
crates/runtime/assets/skills/auto-paper-improvement-loop/: SKILL.md
crates/runtime/assets/skills/auto-review-loop/: SKILL.md
crates/runtime/assets/skills/auto-review-loop-llm/: SKILL.md
crates/runtime/assets/skills/auto-review-loop-minimax/: SKILL.md
crates/runtime/assets/skills/citation-audit/: SKILL.md
crates/runtime/assets/skills/claims-drafting/: SKILL.md
crates/runtime/assets/skills/comm-lit-review/: SKILL.md
crates/runtime/assets/skills/deepxiv/: SKILL.md
crates/runtime/assets/skills/experiment-audit/: SKILL.md
crates/runtime/assets/skills/experiment-bridge/: SKILL.md
crates/runtime/assets/skills/experiment-plan/: SKILL.md
crates/runtime/assets/skills/experiment-queue/: SKILL.md
crates/runtime/assets/skills/grant-proposal/: SKILL.md
crates/runtime/assets/skills/idea-creator/: SKILL.md
crates/runtime/assets/skills/idea-discovery/: SKILL.md
crates/runtime/assets/skills/idea-discovery-robot/: SKILL.md
crates/runtime/assets/skills/invention-structuring/: SKILL.md
crates/runtime/assets/skills/kill-argument/: SKILL.md
crates/runtime/assets/skills/mermaid-diagram/: SKILL.md
crates/runtime/assets/tools/: arxiv_fetch.py  deepxiv_fetch.py  exa_search.py  extract_paper_style.py  figure_renderer.py  openalex_fetch.py  overleaf_audit.sh  overleaf_setup.sh  paper_illustration_image2.py  research_wiki.py  save_trace.sh  verify_paper_audits.sh  verify_papers.py  verify_wiki_coverage.sh  watchdog.py
crates/runtime/src/: bash.rs  bootstrap.rs  cache.rs  compact.rs  config.rs  conversation.rs  event_sink.rs  file_ops.rs  hooks.rs  lib.rs  mcp.rs  mcp_client.rs  mcp_stdio.rs  oauth.rs  permissions.rs  prompt.rs  remote.rs  sandbox.rs  session.rs  usage.rs
crates/tools/: Cargo.toml
crates/tools/src/: lib.rs
(+102 files in other folders)
